src/tests/fixtures/comments/nonJSDocBlockComment.invalid.ts.expected
-----------------
INPUT
----------------- 
// Oops! Forgot to use two asterisks for the JSDoc block comment.

/* @gqlType */
class Composer {}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/comments/nonJSDocBlockComment.invalid.ts:3:4 - error: Unexpected Grats tag in non-JSDoc-style block comment. Grats only looks for tags in JSDoc-style block comments which start with `/**`. For more information see: https://grats.capt.dev/docs/getting-started/comment-syntax

3 /* @gqlType */
     ~~~~~~~~


-- Code Action: "Convert to a docblock comment" (convert-block-comment-to-docblock-comment) --
- Original
+ Fixed

@@ -2,3 +2,3 @@

- /* @gqlType */
+ /** @gqlType */
  class Composer {}